force-app/main/default/objects/Shipping_Condition_Mapping__mdt/Shipping_Condition_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Shipping Condition Mapping</label>
    <pluralLabel>Shipping Condition Mapping</pluralLabel>
</CustomObject>