force-app/main/default/objects/Shipping_Condition_Mapping__mdt/fields/MOT__c.field-meta.xml
<CustomField>
    <fullName>MOT__c</fullName>
    <label>MOT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Truck</fullName>
                <default>true</default>
                <label>Truck</label>
            </value>
            <value>
                <fullName>ITT</fullName>
            </value>
            <value>
                <fullName>Rail</fullName>
            </value>
            <value>
                <fullName>Barge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>