force-app/main/default/objects/Shipping_Condition_Mapping__mdt/fields/MoTKey__c.field-meta.xml
<CustomField>
    <fullName>MoTKey__c</fullName>
    <label>MoTKey</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FCATruck</fullName>
                <default>true</default>
                <label>FCATruck</label>
            </value>
            <value>
                <fullName>CIFTruck</fullName>
            </value>
            <value>
                <fullName>CPTTruck</fullName>
            </value>
            <value>
                <fullName>FCARail</fullName>
            </value>
            <value>
                <fullName>CPTRail</fullName>
            </value>
            <value>
                <fullName>DAPRail</fullName>
            </value>
            <value>
                <fullName>FOBBarge</fullName>
            </value>
            <value>
                <fullName>CIFBarge</fullName>
            </value>
            <value>
                <fullName>CFRBarge</fullName>
            </value>
            <value>
                <fullName>DAPBarge</fullName>
            </value>
            <value>
                <fullName>EXWITT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>