force-app/main/default/objects/Shipping_Condition_Mapping__mdt/listViews/All_Data.listView-meta.xml
<ListView>
    <fullName>All_Data</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Margin_Type__c</columns>
    <columns>MOT__c</columns>
    <columns>Shipping_Condition__c</columns>
    <columns>MoTKey__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Data</label>
    <language>en_US</language>
</ListView>